--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@keystonejs/fields": "^5.2.0",
     "@keystonejs/fields-wysiwyg-tinymce": "^5.0.0",
     "@keystonejs/keystone": "^5.0.0",
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "express": "^4.17.1"
   }
 }
