--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@keystonejs/auth-password": "^5.0.0",
     "@keystonejs/fields": "^5.2.0",
     "@keystonejs/fields-wysiwyg-tinymce": "^5.0.0",
+    "@keystonejs/file-adapters": "^5.3.0",
     "@keystonejs/keystone": "^5.0.0",
     "cross-env": "^5.2.0",
     "express": "^4.17.1"
