--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=8.4.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
+    "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true node index.js",
     "build": "cross-env NODE_ENV=production keystone build",
     "start": "cross-env NODE_ENV=production keystone start",
     "heroku-postbuild": "npm run build"
@@ -18,12 +18,21 @@
     "@keystonejs/adapter-knex": "^5.1.0",
     "@keystonejs/app-admin-ui": "^5.0.0",
     "@keystonejs/app-graphql": "^5.0.0",
+    "@keystonejs/app-next": "^5.0.1",
+    "@keystonejs/app-static": "^5.0.0",
     "@keystonejs/auth-password": "^5.0.0",
     "@keystonejs/fields": "^5.2.0",
     "@keystonejs/fields-wysiwyg-tinymce": "^5.0.0",
     "@keystonejs/file-adapters": "^5.3.0",
     "@keystonejs/keystone": "^5.0.0",
+    "axios": "^0.18.0",
+    "body-parser": "^1.15.1",
     "cross-env": "^5.2.0",
-    "express": "^4.17.1"
+    "express": "^4.13.4",
+    "express-session": "^1.17.0",
+    "multer": "^1.1.0",
+    "sessionstore": "^1.3.7",
+    "xls-to-json-lc": "^0.3.4",
+    "xlsx-to-json-lc": "^0.4.1"
   }
 }
