--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@keystonejs/keystone": "^5.0.0",
     "axios": "^0.18.0",
     "body-parser": "^1.15.1",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "express": "^4.13.4",
     "express-session": "^1.17.0",
