--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@keystonejs/adapter-knex": "^5.1.0",
+    "@keystonejs/adapter-mongoose": "^5.2.0",
     "@keystonejs/app-admin-ui": "^5.0.0",
     "@keystonejs/app-graphql": "^5.0.0",
     "@keystonejs/app-next": "^5.0.1",
